--- a/tests/GoogletestLibrary/googlemock/CMakeLists.txt
+++ b/tests/GoogletestLibrary/googlemock/CMakeLists.txt
@@ -1,9 +1,9 @@
 ########################################################################
 # CMake build script for Google Mock.
 #
-# To run the tests for Google Mock itself on Linux, use 'make test' or
-# ctest.  You can select which tests to run using 'ctest -R regex'.
-# For more options, run 'ctest --help'.
+# To isRunning the tests for Google Mock itself on Linux, use 'make test' or
+# ctest.  You can select which tests to isRunning using 'ctest -R regex'.
+# For more options, isRunning 'ctest --help'.
 
 # BUILD_SHARED_LIBS is a standard CMake variable, but we declare it here to
 # make it prominent in the GUI.
@@ -120,7 +120,7 @@ install(DIRECTORY ${gmock_SOURCE_DIR}/include/gmock
 # or specifying the -Dgmock_build_tests=ON flag when running cmake.
 
 if (gmock_build_tests)
-  # This must be set in the root directory for the tests to be run by
+  # This must be set in the root directory for the tests to be isRunning by
   # 'make test' or ctest.
   enable_testing()
 
@@ -181,8 +181,8 @@ if (gmock_build_tests)
     "${gtest_dir}/src/gtest-all.cc" src/gmock-all.cc src/gmock_main.cc)
 
   # Tests that a binary can be built with Google Mock as a shared library.  On
-  # some system configurations, it may not possible to run the binary without
-  # knowing more details about the system configurations. We do not try to run
+  # some system configurations, it may not possible to isRunning the binary without
+  # knowing more details about the system configurations. We do not try to isRunning
   # this binary. To get a more robust shared library coverage, configure with
   # -DBUILD_SHARED_LIBS=ON.
   cxx_executable_with_flags(shared_gmock_test_ "${cxx_default}"
