--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,6 @@ project(cpp_zia)
 set(TARGET_NAME zia)
 set(CMAKE_CXX_STANDARD 17)
 
-
 if (APPLE)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lstdc++fs -pthread")
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -gdwarf-3")
@@ -15,15 +14,18 @@ elseif (UNIX)
     add_library(stdc++fs UNKNOWN IMPORTED)
     if (${CMAKE_SYSTEM} MATCHES "\\.fc[1-9]")
         set_property(TARGET stdc++fs PROPERTY IMPORTED_LOCATION "/usr/lib/gcc/x86_64-redhat-linux/7/libstdc++fs.a")
-    else()
+    else ()
         set_property(TARGET stdc++fs PROPERTY IMPORTED_LOCATION "/usr/lib/gcc/x86_64-linux-gnu/7/libstdc++fs.a")
-    endif()
-endif()
+    endif ()
+endif ()
+
+SET(MAIN sources/main.cpp)
 
 set(SOURCES
-        sources/main.cpp
         sources/Handler/HttpHandler.cpp
-        sources/Static/ServerConfig.cpp sources/Thread/ThreadPool.cpp sources/Core/ServerCore.cpp sources/Core/ServerLauncher.cpp sources/Handler/SignalHandler.cpp)
+        sources/Static/ServerConfig.cpp
+        sources/Thread/ThreadPool.cpp
+        sources/Core/ServerCore.cpp sources/Core/ServerLauncher.cpp sources/Handler/SignalHandler.cpp)
 
 
 set(INCLUDE
@@ -35,15 +37,19 @@ set(INCLUDE
         include/api/module.h
         include/api/net.h
         include/Library/json.hpp
-        include/Core/ServerCore.hpp include/Thread/ThreadPool.hpp include/Core/ImplSocket.hpp include/Core/ServerLauncher.hpp include/Library/ScanDir.hpp include/Handler/SignalHandler.hpp)
+        include/Core/ServerCore.hpp
+        include/Thread/ThreadPool.hpp
+        include/Core/ImplSocket.hpp
+        include/Core/ServerLauncher.hpp
+        include/Library/ScanDir.hpp include/Handler/SignalHandler.hpp)
 
 
 include_directories(include)
 
-add_executable(${TARGET_NAME} ${SOURCES} ${INCLUDE})
+add_executable(${TARGET_NAME} ${MAIN} ${SOURCES} ${INCLUDE})
 if (UNIX)
     target_link_libraries(${TARGET_NAME} stdc++fs)
-endif()
+endif ()
 
 add_custom_command(TARGET ${TARGET_NAME} PRE_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory
