Creating response (with "test value" as final path prefix at the moment), searches for the asked file. Filling the response body in the case of "200 OK" if the file is found and readable. "503 Forbidden" is the find is found but not readable. "404 Not found" if the file is not found. Creating a simple response header containing the server name, the body length, the body type (always text/html).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,6 @@ set(SOURCES
         sources/Static/ServerConfig.cpp
         sources/Thread/ThreadPool.cpp
         sources/Parser/ReqParser.cpp
-        sources/Parser/AnsParser.cpp
         sources/Core/ServerCore.cpp sources/Core/ServerLauncher.cpp sources/Handler/SignalHandler.cpp)
 
 set(INCLUDE
@@ -43,7 +42,7 @@ set(INCLUDE
         include/Thread/ThreadPool.hpp
         include/Core/ImplSocket.hpp
         include/Core/ServerLauncher.hpp
-        include/Parser/ReqParser.hpp include/Parser/IParser.hpp include/Enum.hpp include/Parser/AnsParser.hpp
+        include/Parser/ReqParser.hpp include/Enum.hpp
 
         include/Library/ScanDir.hpp include/Handler/SignalHandler.hpp)
 
